--- a/package.json
+++ b/package.json
@@ -27,11 +27,15 @@
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "consign": "^0.1.6",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.13.5"
   },
   "devDependencies": {
-    "nodemon": "^1.12.1"
+    "chai": "^4.1.2",
+    "mocha": "^5.0.0",
+    "nodemon": "^1.12.1",
+    "supertest": "^3.0.0"
   }
 }
